<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/tV_taskView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:padding="12dp"
        android:textStyle="italic"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tV_dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:inputType="textPersonName"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/tV_timeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="end"
            android:layout_marginEnd="45dp"
            android:textSize="30sp" />


    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_gravity="start"
            android:padding="2dp"
            android:text="@string/descriptionText"
            android:textStyle="italic"/>
        <EditText
            android:id="@+id/eT_taskView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="15dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="164dp"
            android:scrollbars ="vertical"
            />

        <TextView
            android:id="@+id/delete_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_delete"
            android:textColor="#FF0000"
            android:textSize="28sp"
            android:padding="10dp"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center|bottom"
            android:gravity="center" />
        <Button
            android:id="@+id/btn_crtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_crt"
            android:layout_gravity="bottom|center"/>

    </FrameLayout>
</LinearLayout>